--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gemerador"
         tools:targetApi="31">
+        <activity
+            android:name=".Admin.GestionSolicitudesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".User_Admin.AdminUserManager"
+            android:exported="false" />
         <activity
             android:name=".Perfil.Perfil_user"
             android:exported="false" />
