--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.Gemerador"
         tools:targetApi="31">
         <activity
+            android:name=".Gestion.GestionTickets"
+            android:exported="false" />
+        <activity
+            android:name=".Admin.GestionTickets"
+            android:exported="false" />
+        <activity
             android:name=".Crear_Ti.TicketDetail"
             android:exported="false" />
         <activity
