--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,13 @@
         android:theme="@style/Theme.Gemerador"
         tools:targetApi="31">
         <activity
-            android:name=".Gestion.GestionTickets"
+            android:name=".Trabajador.TrabajadorTicketActivity"
             android:exported="false" />
         <activity
-            android:name=".Admin.GestionTickets"
+            android:name=".Trabajador.TrabajadorManagement"
+            android:exported="false" />
+        <activity
+            android:name=".Gestion.GestionTickets"
             android:exported="false" />
         <activity
             android:name=".Crear_Ti.TicketDetail"
