--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Gemerador"
         tools:targetApi="31">
         <activity
+            android:name=".Tareas_Trabajador.TrabajadorMenu"
+            android:exported="false" />
+        <activity
             android:name=".Trabajador.TrabajadorTicketActivity"
             android:exported="false" />
         <activity
