--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
         android:theme="@style/Theme.Gemerador"
         tools:targetApi="31">
         <activity
-            android:name=".Tareas_Trabajador.TrabajadorMenu"
+            android:name=".Trabajador.TrabajadorTicketDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Trabajador.TrabajadorMenu"
             android:exported="false" />
         <activity
             android:name=".Trabajador.TrabajadorTicketActivity"
