--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.Gemerador"
         tools:targetApi="31">
         <activity
+            android:name=".Lista.UserListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Gestion.GestionTicketsActivity"
+            android:exported="false" />
+        <activity
             android:name=".Trabajador.TrabajadorTicketDetailActivity"
             android:exported="false" />
         <activity
@@ -27,9 +33,6 @@
             android:exported="false" />
         <activity
             android:name=".Trabajador.TrabajadorManagement"
-            android:exported="false" />
-        <activity
-            android:name=".Gestion.GestionTickets"
             android:exported="false" />
         <activity
             android:name=".Crear_Ti.TicketDetail"
