--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,14 @@
         android:theme="@style/Theme.Gemerador"
         tools:targetApi="31">
         <activity
+            android:name=".IA.PredictionHistoryAdapter"
+            android:exported="false" />
+        <activity
+            android:name=".IA.TicketAIActivity"
+            android:exported="false"
+            android:label="Gestión de IA"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
+        <activity
             android:name=".Reporte.TicketReportActivity"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
